[1.1.X] Fixed #13168 - Corrected the alignment of the admin inline headers for rtl languages. Thanks for the report and patch, benc.
Backport from trunk, r13191

git-svn-id: http://code.djangoproject.com/svn/django/branches/releases/1.1.X@13193 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/django/contrib/admin/media/css/rtl.css
+++ b/django/contrib/admin/media/css/rtl.css
@@ -196,7 +196,7 @@ fieldset .field-box {
 
 /* MISC */
 
-.inline-related h2 {
+.inline-related h2, .inline-group h2 {
     text-align: right
 }
 
